Clean up bundle config from YADM migration

--- a/home/dot_bundle/config.tmpl
+++ b/home/dot_bundle/config.tmpl
@@ -1,4 +1,6 @@
 ---
+BUNDLE_PATH: "vendor/bundle"
+BUNDLE_JOBS: "4"
 {{- if eq .chezmoi.os "darwin" }}
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I$HOMEBREW_PREFIX/opt/openssl/include"
 BUNDLE_BUILD__FFI: "--with-ldflags=-L$HOMEBREW_PREFIX/opt/libffi/lib --with-pkg_config_path=$HOMEBREW_PREFIX/opt/libffi/lib/pkgconfig --disable-system-libffi"
@@ -12,7 +14,7 @@ BUNDLE_BUILD__LIBXML___RUBY: "--with-xml2-dir=$HOMEBREW_PREFIX/opt/libxml2"
 {{- end }}
 BUNDLE_BUILD__MYSQL2: "--with-ldflags=-L$HOMEBREW_PREFIX/opt/openssl/lib"
 BUNDLE_BUILD__NOKOGIRI: "--with-xml2-dir=$HOMEBREW_PREFIX/opt/libxml2"
-BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=$HOMEBREW_PREFIX/opt/v8@3.15"
+BUNDLE_BUILD__PG: "--with-pg-dir=$HOMEBREW_PREFIX/opt/postgresql@11"
 {{- if eq .chezmoi.hostname "jamiemacey" }}
 BUNDLE_BUILD__RUBY-FILEMAGIC: "--with-magic-dir=$HOMEBREW_PREFIX/opt/libmagic"
 BUNDLE_BUILD__RUBY-ODBC: "--with-odbc-dir=$HOMEBREW_PREFIX/opt/unixodbc/"
@@ -20,6 +22,5 @@ BUNDLE_BUILD__RUBY-ODBC: "--with-odbc-dir=$HOMEBREW_PREFIX/opt/unixodbc/"
 BUNDLE_BUILD__RUBY___FILEMAGIC: "--with-magic-dir=$HOMEBREW_PREFIX/opt/libmagic"
 BUNDLE_BUILD__RUBY___ODBC: "--with-odbc-dir=$HOMEBREW_PREFIX/opt/unixodbc/"
 {{- end }}
+BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=$HOMEBREW_PREFIX/opt/v8@3.15"
 {{- end }}
-BUNDLE_PATH: "vendor/bundle"
-BUNDLE_JOBS: "4"
