Re-sync from new work machine

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -1,6 +1,6 @@
 [user]
         name = Jamie Macey
-{{- if eq .chezmoi.hostname "jamiemacey" }}
+{{- if eq .chezmoi.hostname "Jamie-Macey-M1" }}
         email = jamie.macey@versapay.com
 {{- else }}
         email = jamie.git@tracefunc.com
