update local ssh hosts

--- a/home/private_dot_ssh/private_config.tmpl
+++ b/home/private_dot_ssh/private_config.tmpl
@@ -8,7 +8,7 @@ Host *
   IdentityFile ~/.ssh/identity
 {{- end }}
 
-Host mycloudex2ultra.local
-  HostName mycloudex2ultra.local
-  User sshd
+Host qnap.shire-universe.ts.net
+  Host qnap.shire-universe.ts.net
+  User manager
   SetEnv TERM=xterm-256color
